--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="banner-content">
                 <h2>Hi, I am</h2>
                 <h1>Ridwan Jamal Sadib</h1>
-                <p>Shot what able cold new see hold. Friendly as an betrayed formerly he . Moring because as to society behaved moments.</p>
+                <p>I am an enthusiastic learner with a strong interest in designing and web development. My goal is to create user-friendly and visually engaging web experiences</p>
                 <div>
                     <button class="btn">Download CV</button>
                     <button class="btn">Contact</button>
@@ -69,6 +69,97 @@
         </div>
 
     </section>
+
+    <section id="skills">
+        <div class="skills-container">
+            <div class=" section-heading">
+                <h2>What I do</h2>
+                <p>
+                    I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.
+                </p>
+            </div>
+            <div class="skill-box">
+                <div class="skill-card">
+                    <image src="images/icons/js.png"></image>
+                    <h3>Vanilla JaaScript</h3>
+                    <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+
+                </div>
+                <div class="skill-card">
+                    <image src="images/icons/react.png"></image>
+                    <h3>React</h3>
+                    <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+
+                </div>
+                <div class="skill-card">
+                    <image src="images/icons/nodejs.png"></image>
+                    <h3>Node.Js</h3>
+                    <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+
+                </div>
+                <div class="skill-card">
+                    <image src="images/icons/mongo.png"></image>
+                    <h3>MongoDB</h3>
+                    <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+
+                </div>
+            </div>
+
+        </div>
+    </section>
+
+    <section id="resume">
+        <div class="section-heading">
+            <h2>A summary of My Resume </h2>
+        </div>
+        <div class="resume-container">
+            <div class="education">
+                <h2 class="section-title">My Education</h2>
+                <div class="resume-card">
+                    <h3 class="card-title"> Master in Computer Engineering</h3>
+                    <p class="card-info">American International University</p>
+                    <p class="card-text">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <hr>
+                <div class="resume-card">
+                    <h3 class="card-title"> Master in Computer Engineering</h3>
+                    <p class="card-info">American International University</p>
+                    <p class="card-text">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <hr>
+                <div class="resume-card">
+                    <h3 class="card-title"> Master in Computer Engineering</h3>
+                    <p class="card-info">American International University</p>
+                    <p class="card-text">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <hr>
+
+            </div>
+            <div class="experience">
+                <h2 class="section-title">My Experience</h2>
+                <div class="resume-card">
+                    <h3 class="card-title"> Master in Computer Engineering</h3>
+                    <p class="card-info">American International University</p>
+                    <p class="card-text">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <hr>
+                <div class="resume-card">
+                    <h3 class="card-title"> Master in Computer Engineering</h3>
+                    <p class="card-info">American International University</p>
+                    <p class="card-text">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <hr>
+                <div class="resume-card">
+                    <h3 class="card-title"> Master in Computer Engineering</h3>
+                    <p class="card-info">American International University</p>
+                    <p class="card-text">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <hr>
+
+            </div>
+        </div>
+    </section>
+
 
 </body>
 </html>
