--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                 </div>
                 <div class="">
 
-                    <textarea  name="" id="" placeholder="Message"></textarea>
+                    <textarea rows="10"  name="" id="" placeholder="Message"></textarea>
                 
                 </div>
                 <input class="btn" type="submit" value="submit">
